# parser

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists_v2.txt  readme.md
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: check_parser.cpp  comprehensive_eval.cpp  compute_ambiguity_metrics.cpp  compute_baseline.cpp  compute_entropy_dp.cpp  count_derivations.cpp  count_nodes.cpp  em_debugger.cpp  em_verify.cpp  evaluate.cpp  forest_cache.cpp  forest_cache.hpp  generate.cpp  get_deriv_rule_indices.cpp  get_derivation_edges.cpp  get_lemma_sentences.cpp  get_original_sentences.cpp  manager.cpp  manager.hpp  run_1iter.cpp  run_all_experiments.cpp  run_batch_em.cpp  run_comprehensive_evaluation.cpp  run_em.cpp  run_em_coordinator.cpp  run_em_experiment.cpp  run_em_viterbi.cpp  run_evaluation_only.cpp  run_online_em.cpp  shrg_parser.cpp  test.cpp  test_forest_cache.cpp  treewidth.cpp
src/FLA/: eval_developmental.hpp  eval_single_age.cpp  eval_single_age.hpp
src/ambiguity_metrics/: ambiguity_metrics.hpp  derivation_entropy.cpp  derivation_entropy_dp.cpp  expected_derivation_count.cpp  forest_complexity.cpp
src/em_framework/: em.cpp  em.hpp  em_base.cpp  em_base.hpp  em_batch.cpp  em_batch.hpp  em_data_processor.cpp  em_data_processor.hpp  em_debug.cpp  em_debug.hpp  em_online.cpp  em_online.hpp  em_types.hpp  em_utils.cpp  em_utils.hpp  em_viterbi.cpp  em_viterbi.hpp  find_derivations.cpp  find_derivations.hpp  variational_inference.cpp  variational_inference.hpp
src/em_framework/em_evaluate/: em_evaluate.cpp  em_evaluate.hpp  eval_deriv.cpp  eval_deriv.hpp  eval_utils.cpp  eval_utils.hpp  evaluate_tree.cpp  evaluate_tree.hpp
src/em_framework/em_hmm/: em_hmm.cpp  em_hmm.hpp  em_hmm_utils.cpp  em_hmm_utils.hpp  hmm_base.hpp  viterbi_hmm.cpp  viterbi_hmm.hpp
src/experiment_runner/: README.md  experiment_config.cpp  experiment_config.hpp  experiment_runner.cpp  experiment_runner.hpp
src/graph_parser/: edsgraph.cpp  edsgraph.hpp  generator.cpp  generator.hpp  hyper_graph.hpp  parser_base.cpp  parser_base.hpp  parser_chart_item.hpp  parser_debug.cpp  parser_debug.hpp  parser_linear.cpp  parser_linear.hpp  parser_linear_base.cpp  parser_linear_base.hpp  parser_tree_base.cpp  parser_tree_base.hpp  parser_tree_index_v1.cpp  parser_tree_index_v1.hpp  parser_tree_index_v2.cpp  parser_tree_index_v2.hpp  parser_tree_v1.cpp  parser_tree_v1.hpp  parser_tree_v2.cpp  parser_tree_v2.hpp  parser_utils.cpp  parser_utils.hpp  synchronous_hyperedge_replacement_grammar.cpp  synchronous_hyperedge_replacement_grammar.hpp  tokens.cpp  tokens.hpp  tree_decomposer.cpp  tree_decomposer.hpp
src/include/: basic.hpp  beam.hpp  bleu.cpp  bleu.hpp  memory_utils.hpp  ngram.hpp  perceptron.hpp
src/python/: export_derivation.cpp  extra_ambiguity_metrics.cpp  extra_ambiguity_metrics.hpp  extra_chart_item.cpp  extra_chart_item.hpp  extra_context.cpp  extra_context.hpp  extra_edge_set.cpp  extra_edge_set.hpp  extra_edsgraph.cpp  extra_edsgraph.hpp  extra_em.hpp  extra_shrg.cpp  extra_shrg.hpp  find_best_derivation.cpp  inside_outside.cpp  inside_outside.cpp.old  inside_outside.hpp  inside_outside_impl.cpp  interface.cpp  multi_threads_runner.cpp  multi_threads_runner.hpp
